[package]
name = "solver-flows"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql.workspace = true
bcs.workspace = true
linera-sdk.workspace = true
serde_json = "1.0.137"
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer", "unstable-oracles"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
linera-sdk = { workspace = true,  features = ["test"] }

[[bin]]
name = "flows_contract"
path = "src/contract.rs"

[[bin]]
name = "flows_service"
path = "src/service.rs"
