[package]
name = "solver-flows"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
bcs = "0.1.3"
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer", "unstable-oracles"] }
tokio = "1.39.3"

[dev-dependencies]
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer", "unstable-oracles"] }

[[bin]]
name = "flows_contract"
path = "src/contract.rs"

[[bin]]
name = "flows_service"
path = "src/service.rs"
